--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         text{
             font-family: sans-serif;
             font-size: 0.75em;
+            cursor: pointer;
         }
         .Hours {
             width: 100%;
@@ -57,6 +58,9 @@
         table {
             width: 100%;
         }
+        rect {
+            cursor: pointer;
+        }
 
     </style>
     <div class="container">
@@ -70,11 +74,11 @@
         <table>
             <tr>
                 <td class="halfWidthtd">
-                        <h2>Hour Crime Occurred</h2>
+                        <h3>Hour Crime Occurred</h3>
                 </td>
                 <td class="tdHorizontalSpacer"></td>
                 <td class="halfWidthtd">
-                        <h2>Category of Crime</h2>
+                        <h3>Category of Crime</h3>
                 </td>
             </tr>
             <tr class="charttr">
