--- a/index.html
+++ b/index.html
@@ -106,10 +106,22 @@
         width: 100%;
 
     }
+    .tooltip {
+        position: absolute;
+        background: lightgrey;
+        width: auto;
+        height: auto;
+        padding: 10px;
+        border-radius: 8px;
+        pointer-events: none;
+
+    }
+
 </style>
 <div class="container">
 
     <body>
+        <div class="tooltip"></div>
         <h1>Crime in Seattle 2008 - 2017</h1>
         <p>The following charts show the frequency and category of crimes that occur in Seattle. You can move back and forth through the scenes by clicking on the arrows to the right and left.</p>
         <table>
