--- a/index.html
+++ b/index.html
@@ -116,6 +116,14 @@
         pointer-events: none;
 
     }
+    a {
+        margin-top: 75px;
+        color: black;
+        
+    }
+    .about {
+        margin-top: 75px;
+    }
 
 </style>
 <div class="container">
@@ -180,6 +188,11 @@
 
 
         </svg>
+        <div class="about">
+
+            <a href="about.html">About the Visualiztion</a>
+        </div>
+        
 
 
 
