--- a/index.html
+++ b/index.html
@@ -50,15 +50,6 @@
         height: 500;
     }
 
-    /* .halfWidthtd {
-        width: 43%;
-        height: 100%;
-    } */
-
-    /* .chart1tdClass {
-        width: 43%;
-        height: 100%;
-    } */
 
     .sideBarSmall {
         width: 5%;
@@ -85,6 +76,14 @@
     .sidebar:hover {
         background: lightgrey;
         cursor: pointer;
+    }
+
+    .sideBarNoHover {
+        width: 3%;
+        font-size: 8em;
+        text-anchor: middle;
+        text-align: center;
+
     }
 
     /* .tdHorizontalSpacer {
@@ -154,7 +153,7 @@
 
             </tr>
             <tr class="charttr">
-                <td  class="sideBar" onclick="reverseScene()">‹</td>
+                <td id="leftSideBar" class="sideBar" onclick="reverseScene()">‹</td>
 
                 <td class="chart1tdClass" id="chart1TD">
                     <svg id="Hours" class="Hours">
@@ -170,7 +169,7 @@
                 </td>
 
 
-                <td  class="sideBar" onclick="advanceScene()">›</td>
+                <td id="rightSideBar" class="sideBar" onclick="advanceScene()">›</td>
                 
 
             </tr>
