--- a/about.html
+++ b/about.html
@@ -61,6 +61,18 @@
             to show them where they are at. Additionaly, there are triggers to change bar colors 
             based on user selections and scene changes.
         </p>
+        <h3>Limitations</h3>
+        <p>
+            The visualization is best viewed on a computer and not a mobile device.
+        </p>
+        <h3>Design Choices</h3>
+        <p>
+            Throughout the visualization, I went with a minimalistic style. I deliberately 
+            did not include legends on the chart, because I wanted the viewer to be thinking 
+            about relative frequencies and not absolute frequencies (e.g. how DUIs are 
+            distributed throughout the day). The total number of crimes a bar represents 
+            can be viewed on demand through the tooltip.
+        </p>
 
     </div>
     
