--- a/index.html
+++ b/index.html
@@ -133,7 +133,12 @@
     <body>
         <div class="tooltip"></div>
         <h1>Crime in Seattle 2008 - 2017</h1>
-        <p>The following charts show the frequency and category of crimes that occur in Seattle. You can move back and forth through the scenes by clicking on the arrows to the right and left.</p>
+        <p>The following charts show the frequency and category 
+            of crimes that occur in Seattle. You can move back 
+            and forth through the scenes by clicking on the arrows 
+            to the right and left. On the final scene, you can 
+            filter the charts to explore the data on your own 
+            by clicking on the bars.</p>
         <table>
             <tr>
 
