--- a/about.html
+++ b/about.html
@@ -56,8 +56,8 @@
         </p>
         <h3>Triggers</h3>
         <p>
-            The parameters in the visualzations drive sereral triggers. When a user moves forward 
-            or backward therough the scenes of the visualization, the progress bar moves with the 
+            The parameters in the visualzations drive several triggers. When a user moves forward 
+            or backward through the scenes of the visualization, the progress bar moves with the user 
             to show them where they are at. Additionaly, there are triggers to change bar colors 
             based on user selections and scene changes.
         </p>
